k8s/overseerr/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overseerr 
  labels:
    name: overseerr
