k8s/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: linuxserver/overseerr
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /config
              name: overseerr
      volumes:
        - name: overseerr
          hostPath:
            path: /opt/overseerr/config
