k8s/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app: overseerr
    kubernetes.io/name: "overseerr"
spec:
  type: NodePort
  ports:
    - name: overseerr
      port: 5055
      targetPort: 5055
      nodePort: 30017
  selector:
    app: overseerr
