k8s/overseerr/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-lb
  namespace: ingress
  # namespace: overseerr
  annotations:
    metallb.universe.tf/allow-shared-ip: "overseerr-shared-ip"
spec:
  selector:
    # app: overseerr
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.1.10
  ports:
    - name: overseerr
      protocol: TCP
      port: 5055 
      targetPort: 5055
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: overseerr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: overseerr.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
